# glean

./: .gitignore  .gitmodules  .gleanignore  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  biome.json  meta.json  package.json  pnpm-lock.yaml  release-please-config.json  turbo.json
.github/workflows/: release-desktop-reusable.yml  release-desktop.yml  release-please.yml  rust.yml
apps/cli/: Cargo.toml  README.md  package.json
apps/cli/src/: cmd_config.rs  cmd_daemon.rs  cmd_logs.rs  cmd_mcp.rs  cmd_models.rs  cmd_status.rs  lib.rs  logging.rs  main.rs  parser_bootstrap.rs
apps/cli/src/mcp_protocol/: mod.rs  router.rs
apps/cli/tests/: config_cli.rs  mcp_subprocess.rs
apps/desktop/: CHANGELOG.md  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml
apps/desktop/apps/desktop/: CHANGELOG.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  daemon_sidecar.rs  lib.rs  prefs.rs  state.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/app/about/: page.tsx
apps/desktop/src/app/index/: page.tsx
apps/desktop/src/app/settings/: page.tsx
apps/desktop/src/components/: copy-button.tsx  glean-app-shell.tsx  glean-desktop-required.tsx  glean-no-workspace.tsx  glean-path-row.tsx  glean-search-palette.tsx  theme-toggle.tsx
apps/desktop/src/contexts/: glean-app-context.tsx
apps/desktop/src/lib/: tauri.ts  types.ts  utils.ts
scripts/: prepare_sidecar_bin.sh  verify_rust.sh
