[package]
name = "glean-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Glean CLI: daemon, MCP stdio server, and human-facing commands."
license = "Apache-2.0"
default-run = "glean"

[lib]
name = "glean_cli"
path = "src/lib.rs"

[[bin]]
name = "glean"
path = "src/main.rs"

[features]
default = []
enterprise = ["glean-host/enterprise"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
glean-core = { path = "../../packages/core" }
glean-host = { path = "../../packages/host" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
